<resources>
    <string name="app_name">MyResto</string>
    <string name="tit_main_activity">Realizar Pedido</string>
    <string name="lblNombreCliente">Nombre</string>
    <string name="cbIncluirPropina">Incluir Propinas</string>
    <string name="cbPermiteCancelar">Permitir Cancelar</string>
    <string name="cbBebidaXL">Bebida XL</string>
    <string name="lblReservarMesa" >Reservar Mesa</string>
    <string name="lblDelivery" >Envio a domicilio</string>
    <string name="lblNotificacionesActivadas">Notificar confirmacion</string>
    <string name="lblNotificacionesOff">No notificar</string>
    <string name="lblPagarDebito">Debita de cuenta</string>
    <string name="lblPagoEfectivo">Pagar al entregar</string>
    <string name="btnConfirmar">Confirmar</string>
    <string name="btnCancelarLbl">Cancelar</string>
    <string name="lblDetallePedido">Ingrese su pedido detallado</string>

</resources>
